# orders-service

./: .gitignore  Cargo.toml  Dockerfile  api.yaml  aws-task-definition.json  exchange.json
.github/workflows/: anypoint.yaml  deploy.yaml
src/: data.rs  main.rs
