[package]
name = "orders-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = "0.4.23"
fake = {version = "2.5", features = ["derive", "http", "uuid", "chrono"] }
rand = "0.8"

[[bin]]
name = "orders-service"
path = "src/main.rs"